@@ -20,6 +20,14 @@ Until now, user code could call (@ (guile) sleep), the core Guile binding for
 caused ‘shepherd’ to actually sleep for that time, instead of performing other
 on-going tasks.  ‘sleep’ is now replaced by (@ (fibers) sleep) to avoid that.
 
+** Do not accidentally wait for Linux kernel thread completion
+   (<https://issues.guix.gnu.org/67132>)
+
+In cases a PID file contained a bogus PID or one that’s only valid in a
+separate PID namespace, shepherd could end up waiting for the termination of
+what’s actually a Linux kernel thread, such as PID 2 (“kthreadd”).  This
+situation is now recognized and avoided.
+
 * Changes in 0.10.2
 
 ** ‘shepherd’ loads configuration file asynchronously
